// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReposList> renders "No repositories available." when repos are undefined 1`] = `
<DocumentFragment>
  <div
    class="text-gray-700"
  >
    <h3
      class="text-center"
    >
      <p>
        Repositories
      </p>
    </h3>
    <p>
      No repositories available.
    </p>
  </div>
</DocumentFragment>
`;

exports[`<ReposList> renders repositories list with data 1`] = `
<DocumentFragment>
  <div
    class="text-gray-700"
  >
    <h3
      class="text-center"
    >
      <p>
        Repositories
      </p>
    </h3>
    <div>
      <a
        href="/"
      >
        <div>
          <ul>
            <li>
              <div>
                <img
                  alt="developer1"
                />
              </div>
              <p>
                repo1
              </p>
            </li>
          </ul>
        </div>
      </a>
    </div>
    <div>
      <a
        href="/"
      >
        <div>
          <ul>
            <li>
              <div>
                <img
                  alt="developer1"
                />
              </div>
              <p>
                repo2
              </p>
            </li>
          </ul>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;
